--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>{{title}}</h1>
+<!-- <h1>{{title}}</h1>
 <hr>
 <p>Welcome to Angular</p>
 <p>Hello word</p>
@@ -8,4 +8,5 @@
 <hr>
 <app-heroes-hero></app-heroes-hero>
 <hr>
-<app-heroes-list></app-heroes-list>
+<app-heroes-list></app-heroes-list> -->
+<app-dbz-main-page></app-dbz-main-page>
